2012-12-03 Max Baak <mbaak@cern.ch>
	M       configManager.py
	M       fitConfig.py
	* New feature: for overall sys, possibly use different channel to evaluate systematics
	M       prepareHistos.py
	M       configManager.py
	M       sample.py
	M       systematic.py


2012-12-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
    * scripts/HistFitter.py: missing nargs="+", strings would get chopped up

2012-11-27 Alex Koutsman <alex.koutsman@cern.ch>
	* src/Utils.cxx fixed bug in GetFullRegionName function used by YieldsTable script

2012-11-27 Alex Koutsman <alex.koutsman@cern.ch>
	* these changes were alrady done on 2012-11-14, but did not get saved in svn or overwritten  (?)
	* macros/Examples/pythonFreeConfig/Config_pythonFree.C : addition of example macro to run HistFitter C++ side without python side
	* src/ChannelStyle.cxx : adjustments for unknown samples	
	* src/ChannelStyle.h : addition of addSample() function		
	* python/configManager.py : using addSample function
	* src/Utils.cxx : fix in PlotNL function for inf/Nan propagated to plot error

2012-11-26 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	M       python/configManager.py
	M       python/prepareHistos.py
	M       python/systematic.py
	M       scripts/HistFitter.py
	* Improvements to speed; ~8% speed gain when running over 12 grid points

2012-11-22 Max Baak <mbaak@cern.ch>
	M       python/configManager.py
	* Change a mkdir into mkdir_p

2012-11-22 Max Baak <mbaak@cern.ch>
	M       python/configManager.py
	M       python/MyConfigExampleMCStat.py
	* updated mc stat uncertainty implementation. Now much simpler to implement for user.
	* Tagging: HistFitter-00-00-19-02

2012-11-21 Max Baak <mbaak@cern.ch>
	M       MyConfigExampleMCStat.py
	* commited wrong config file. argh
        * Tagging: HistFitter-00-00-19-01

2012-11-21 Max Baak <mbaak@cern.ch>
	* Tagging: HistFitter-00-00-19

2012-11-21 Max Baak <mbaak@cern.ch>
	A       MyConfigExampleMCStat.py
	M       MyConfigExample.py