@@ -1,3 +1,13 @@
+2012-12-04 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* Fixed issue where treeName would be improperly set for weight-based
+	systematics. The solution assumes the old code, and checks if the tree
+	name exists. If not, a treeName set to the name of the associated sample
+	(plus possible prefix) is used for both high and low. This issue stems
+	from a philosophical difference in approach with inputs: one tree
+	containing branches for high and low, versus two trees (one each for high
+	and low respectively). Issue needs more permanent resolving; current code
+	is several hacks on top of each other.
+
 2012-12-03 Max Baak <mbaak@cern.ch>
 	M       configManager.py
 	M       fitConfig.py
